Source/WebCore/Modules/mediacontrols/MediaControlsHost.cpp
@@ -142,7 +142,7 @@ Vector<RefPtr<TextTrack>> MediaControlsHost::sortedTrackListForMenu(TextTrackLis
     if (!page)
         return { };
 
-    return page->group().captionPreferences().sortedTrackListForMenu(&trackList, { TextTrack::Kind::Subtitles, TextTrack::Kind::Captions, TextTrack::Kind::Descriptions });
+    return page->group().ensureCaptionPreferences().sortedTrackListForMenu(&trackList, { TextTrack::Kind::Subtitles, TextTrack::Kind::Captions, TextTrack::Kind::Descriptions });
 }
 
 Vector<RefPtr<AudioTrack>> MediaControlsHost::sortedTrackListForMenu(AudioTrackList& trackList)
@@ -154,7 +154,7 @@ Vector<RefPtr<AudioTrack>> MediaControlsHost::sortedTrackListForMenu(AudioTrackL
     if (!page)
         return { };
 
-    return page->group().captionPreferences().sortedTrackListForMenu(&trackList);
+    return page->group().ensureCaptionPreferences().sortedTrackListForMenu(&trackList);
 }
 
 String MediaControlsHost::displayNameForTrack(const std::optional<TextOrAudioTrack>& track)
@@ -167,7 +167,7 @@ String MediaControlsHost::displayNameForTrack(const std::optional<TextOrAudioTra
         return emptyString();
 
     return WTF::visit([page] (auto& track) {
-        return page->group().captionPreferences().displayNameForTrack(track.get());
+        return page->group().ensureCaptionPreferences().displayNameForTrack(track.get());
     }, track.value());
 }
 
@@ -190,7 +190,7 @@ AtomString MediaControlsHost::captionDisplayMode() const
     if (!page)
         return emptyAtom();
 
-    switch (page->group().captionPreferences().captionDisplayMode()) {
+    switch (page->group().ensureCaptionPreferences().captionDisplayMode()) {
     case CaptionUserPreferences::Automatic:
         return automaticKeyword();
     case CaptionUserPreferences::ForcedOnly:
@@ -556,7 +556,7 @@ bool MediaControlsHost::showMediaControlsContextMenu(HTMLElement& target, String
         if (auto* audioTracks = mediaElement.audioTracks(); audioTracks && audioTracks->length() > 1) {
             Vector<MenuItem> languageMenuItems;
 
-            auto& captionPreferences = page->group().captionPreferences();
+            auto& captionPreferences = page->group().ensureCaptionPreferences();
             for (auto& audioTrack : captionPreferences.sortedTrackListForMenu(audioTracks))
                 languageMenuItems.append(createMenuItem(audioTrack, captionPreferences.displayNameForTrack(audioTrack.get()), audioTrack->enabled()));
 
@@ -569,7 +569,7 @@ bool MediaControlsHost::showMediaControlsContextMenu(HTMLElement& target, String
         if (auto* textTracks = mediaElement.textTracks(); textTracks && textTracks->length()) {
             Vector<MenuItem> subtitleMenuItems;
 
-            auto& captionPreferences = page->group().captionPreferences();
+            auto& captionPreferences = page->group().ensureCaptionPreferences();
             auto sortedTextTracks = captionPreferences.sortedTrackListForMenu(textTracks, { TextTrack::Kind::Subtitles, TextTrack::Kind::Captions, TextTrack::Kind::Descriptions });
             bool allTracksDisabled = notFound == sortedTextTracks.findMatching([] (const auto& textTrack) {
                 return textTrack->mode() == TextTrack::Mode::Showing;
@@ -593,7 +593,7 @@ bool MediaControlsHost::showMediaControlsContextMenu(HTMLElement& target, String
 
     if (optionsJSONObject->getBoolean("includeChapters"_s).value_or(false)) {
         if (auto* textTracks = mediaElement.textTracks(); textTracks && textTracks->length()) {
-            auto& captionPreferences = page->group().captionPreferences();
+            auto& captionPreferences = page->group().ensureCaptionPreferences();
 
             for (auto& textTrack : captionPreferences.sortedTrackListForMenu(textTracks, { TextTrack::Kind::Chapters })) {
                 Vector<MenuItem> chapterMenuItems;
